--- a/input.css
+++ b/input.css
@@ -1,1 +1,18 @@
 @import "tailwindcss";
+
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+dialog:-internal-dialog-in-top-layer::backdrop {
+    background: rgba(0, 0, 0, 0.35);
+}
+
+.upload-config-box::before {
+    content: "Click to upload files or drag and drop it here.";
+    font-size: 12px;
+    color: #888;
+}
